plugins {
    id 'eclipse'
    id 'idea'
    id 'maven-publish'
    id 'net.minecraftforge.gradle' version '[6.0,6.2)'
}

version = mod_version
group = mod_group_id

base {
    archivesName = "DGLabCraft-${minecraft_version}"
}

java {
    sourceCompatibility = JavaVersion.VERSION_1_8
    targetCompatibility = JavaVersion.VERSION_1_8
}

minecraft {
    mappings channel: mapping_channel, version: mapping_version
    copyIdeResources = true

    runs {
        configureEach {
            workingDirectory project.file('run')
            property 'forge.logging.console.level', 'info'
            mods {
                "${mod_id}" {
                    source sourceSets.main
                }
            }
        }
        client {}
        server { args '--nogui' }
    }
}

repositories {
    mavenCentral()
}

configurations {
    shade
    implementation.extendsFrom shade
}

dependencies {
    minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"

    // 1.3.9 avoids the SLF4J 2.x dependency that conflicts with Forge 1.16.5.
    shade 'org.java-websocket:Java-WebSocket:1.3.9'
    shade('com.google.zxing:core:3.5.1') {
        exclude group: 'commons-logging', module: 'commons-logging'
    }

    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.2'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

test {
    useJUnitPlatform()
}

tasks.named('processResources', ProcessResources).configure {
    def replaceProperties = [
        minecraft_version: minecraft_version,
        minecraft_version_range: minecraft_version_range,
        forge_version: forge_version,
        forge_version_range: forge_version_range,
        loader_version_range: loader_version_range,
        mod_id: mod_id,
        mod_name: mod_name,
        mod_license: mod_license,
        mod_version: mod_version,
        mod_authors: mod_authors,
        mod_description: mod_description
    ]
    inputs.properties replaceProperties
    filesMatching(['META-INF/mods.toml', 'pack.mcmeta']) {
        expand replaceProperties
    }
}

tasks.named('jar', Jar).configure {
    archiveFileName = "DGLabCraft-${minecraft_version}-${project.version}-Forge.jar"
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
    from {
        configurations.shade.collect { it.isDirectory() ? it : zipTree(it) }
    }
    exclude 'META-INF/*.RSA', 'META-INF/*.SF', 'META-INF/*.DSA', 'META-INF/versions/**', 'module-info.class'
    manifest {
        attributes([
            'Specification-Title': mod_id,
            'Specification-Vendor': mod_authors,
            'Specification-Version': '1',
            'Implementation-Title': project.name,
            'Implementation-Version': project.version,
            'Implementation-Vendor': mod_authors
        ])
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

reobf {
    jar {}
}

build.dependsOn reobfJar

publishing {
    publications {
        register('mavenJava', MavenPublication) {
            artifact jar
        }
    }
}
